fix(panel): reset text align
Closes #537

--- a/src/content/components/WordEditor/WordEditor.scss
+++ b/src/content/components/WordEditor/WordEditor.scss
@@ -11,6 +11,7 @@
   margin: auto;
   background: rgba(0, 0, 0, 0.4);
   display: flex;
+  text-align: initial;
 }
 
 .wordEditor-PanelContainer {
